2005-05-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/style.css:

	Only suppress scrollbars for some elements; using it for <div> breaks
	the layout horribly.

2005-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/Makefile.am:
	* src/Writer.cpp:
	* src/Writer.h:

	Fix crash in the PNG writer when Prepare was never called.
	Adapt to changed behaviour in nsIViewManager::RenderOffscreen;
	the rect is now converted (and rounded, urgh) to pixels.

2005-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* data/style.css:
	* src/main.cpp: (init_gecko):

	Add a stylesheet to remove the scrollbars.

2005-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/Listener.cpp:
	* src/Listener.h:

	Fix for mozilla API change to nsIDOMLoadListener.

2005-04-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix a mem leak, and simplify the code for little endian case.

2005-04-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/thumbnailer.schemas.in:
	* po/POTFILES.in:

	Add schema file to POTFILES.in, and change a few strings in the
	schema.

2005-04-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/Listener.cpp:
	* src/Listener.h:
	* src/main.cpp:

	Use nsIWebBrowserSetup to disable global history and redirects,
	as well as frames.

2005-04-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:

	Check for NULL arguments.

2005-04-24  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix rounding in thumbnail height calculation.

	* src/main.cpp:

	Remove --thumbnail option from gnome-web-photo, and add defaults to
	--width and --size.

2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/Components.cpp:
	* src/Components.h:
	* src/Makefile.am:
	* src/main.cpp:

	Add dummy prompt service implementation which always returns
	cancel.

2005-04-23  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:

	Disable formfill and password manager.

	* src/Writer.cpp:

	Sanity check.
	